--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+
+.nc-ProductCard__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Giới hạn số dòng */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Hiển thị dấu "..." nếu quá dài */
+  }
